# project_mlops

./: .gitignore  Makefile  README.md  app.py  cloud_build.yaml  cloudbuild.yaml  data.dvc  pyproject.toml  requirements.txt  test.py  trainnb.ipynb
.dvc/: config
.github/: python-ci.yml
.github/workflows/: ci.yml
config/: hyperparameters.yaml
data/raw/: make_dataset.py  processor.py
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: trained_model.pth  trained_model2.pth
project_mlops/: Makefile  README.md  pyproject.toml
project_mlops/dockerfiles/: predict_model.dockerfile  train_model.dockerfile
project_mlops/docs/: mkdocs.yaml
project_mlops/docs/source/: index.md
project_mlops/ml_ops/: __init__.py
reports/: README.md
tbd/: __init__.py  predict_model.py
tbd/data/: make_dataset.py  processor.py
tbd/models/: model.py  predict_model.py  train_model.py
tests/: __init__.py  test_data.py  test_predict_model.py  test_train_model.py  utils.py
